<resources>
    <string name="app_name">Diploma</string>
    <string name="main_text">NeWork!</string>
    <string name="avatar">Avatar</string>
    <string name="menu">Menu</string>
    <string name="likes">Likes</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="description_post_save">Save</string>
    <string name="error_empty_content">Text cannot be null or empty</string>
    <string name="menu_edit">Edit post</string>
    <string name="edit_message">Edit Message</string>
    <string name="description_edit_cancel">Edit cancel</string>
    <string name="description_pencil">Pencil</string>
    <string name="edit_text">Editable text</string>
    <string name="chooser_share">Choose application for share</string>
    <string name="add_new_post">Add new post</string>
    <string name="video">Video</string>
    <string name="play_video">Play video</string>
    <string name="google_play_unavailable">Google Api unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s Create new post:</string>
    <string name="empty_text">There are no posts.\\nIf you create a new post, it will appear here</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="attachments">Attachments</string>
    <string name="new_posts">Fresh posts</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_post_photo">Post photo attachment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="error_empty_login_or_password">Login or password cannot be null or empty</string>
    <string name="error_wrong_login_or_password">Wrong login or password</string>
    <string name="not_authorized">You are not authorized</string>
    <string name="sign_in_account">Do you want to sing in to your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure want to sign out?</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="error_empty_field">All fields must be filled</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="error_password">Password field and confirm password field must match</string>
    <string name="ad_description">Advertising</string>
    <string name="test">Test</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="user_is_already_registered">User is already registered</string>
    <string name="only_jpeg_png_with_maximum_size_2048_2048">Only jpeg png with maximum size 2048 2048</string>
    <string name="track_name">Track name</string>
    <string name="need_permission">Need permission</string>
    <string name="my_location">My location</string>
    <string name="tap_to_save_location">Tap to save location</string>
    <string name="link">Link</string>
    <string name="choose_location">Choose location</string>
    <string name="choose_users">Choose users</string>
    <string name="select_file">Select file</string>
    <string name="remove_attachment">Remove attachment</string>
    <string name="remove_location">Remove location</string>
    <string name="remove_users">Remove users</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="mentioned">Mentioned</string>
    <string name="looking_for_a_job">Looking for a job</string>
    <string name="tap_the_place_to_choose">Tap the place to choose</string>
    <string name="add_new_event">Add new event</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="choose_date_time_format">Choose date time format</string>
    <string name="format">Format</string>
    <string name="date">Date</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="choose_date_of_your_event">Choose date of your event</string>
    <string name="back">Back</string>
    <string name="likers">Likers</string>
    <string name="no_posts">No posts</string>
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="create">Create</string>
    <string name="company">Company</string>
    <string name="dash">-</string>
    <string name="add">Add</string>
    <string name="Wall">Wall</string>
    <string name="Jobs">Jobs</string>
    <string name="fields_must_be_filled_in">Fields must be filled in</string>
    <string name="choose_speakers">Choose speakers</string>
    <string name="mentioned_users">Mentioned users</string>
    <string name="audio">Audio</string>
    <string name="profile">Profile</string>
    <string name="track">Track</string>
    <string name="home">Home</string>
    <string name="play_audio">Play audio</string>
    <string name="stop_audio">Stop audio</string>
    <string name="edit_event">Edit event</string>
    <string name="all_events">All events</string>
    <string name="all_posts">All posts</string>
    <string name="all_users">All users</string>
    <string name="edit_post">Edit post</string>
    <string name="new_event">New event</string>
    <string name="new_post">New post</string>
    <string name="change">Change</string>
    <string name="max_file_size">maximum file size = 15mb</string>
    <string name="add_post">Add post</string>
    <string name="add_job">Add job</string>
    <string name="grey_screen">Grey screen</string>
    <string name="zoom">Zoom</string>
    <string name="zoom_out">Zoom out</string>
    <string name="attachment">Attachment</string>
    <string name="edit_job">Edit job</string>
    <string name="remove_job">Remove job</string>
</resources>