<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_arrow_24" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/companyJob"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@color/grey"
        android:hint="@string/company_name"
        android:paddingHorizontal="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/positionJob"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@color/grey"
        android:hint="@string/position"
        android:paddingHorizontal="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_margin ="16dp">

        <TextView
            android:id="@+id/startJob"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center_vertical"
            android:hint="@string/start_date"
            android:paddingHorizontal="16dp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/finishJob"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center_vertical"
            android:hint="@string/end_date"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/linkJob"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@color/grey"
        android:hint="@string/link"
        android:paddingHorizontal="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createJob"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create"
        android:layout_margin="16dp"/>

</LinearLayout>